Fixed the problem of disable scroll in version mobile/desktop

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
   color: var(--text-color);
   font-family: Montserrat;
   font-size: 1.6rem;
-  overflow: overlay;
+  overflow: auto;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
